# anti-money-laundering

./: .gitignore  pyproject.toml
models/: feature_names.json  selection_decision.json  xgboost.joblib
scripts/: run_gfp.py  test_pipeline.py
src/: config.py
src/data/: download.py  preprocess.py
src/models/: evaluate.py  select.py  train.py
src/pipeline/: graph.py  state.py
src/pipeline/agents/: risk_assessor.py  sar_generator.py  scorer.py
src/ui/: app.py
