[project]
name = "sisproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.81",
    "langgraph>=1.1.4",
    "matplotlib>=3.10.8",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "kaggle>=2.0.0",
    "pandas>=3.0.2",
    "ruff>=0.15.8",
]
